--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header>
         <ul class="logo">
-            <li><a href="#">ROSHA</a></li>
+            <li><a href="#">ROSHAaa</a></li>
 
         </ul>
 
